--- a/themes/yodeley/style.scss
+++ b/themes/yodeley/style.scss
@@ -295,7 +295,7 @@ ul.navbar-nav li>a { font-weight: 600; text-transform: lowercase; }
     right: 0;
     top: 50%;
     transform: translate(0,-50%);
-    padding: 60px 30px 30px;
+    padding: 30px;
     color: $yellow;
     text-align: center;
     li {
@@ -303,8 +303,12 @@ ul.navbar-nav li>a { font-weight: 600; text-transform: lowercase; }
       color: $yellow;
       font-size: 1.5em;
       padding-left: 15px;
+      transition: 0.3s;
       &:first-of-type {
         padding-left: 0;
+      }
+      &:hover {
+        color: $white;
       }
     }
     #entreemcontato {
@@ -564,10 +568,7 @@ ul.navbar-nav li>a { font-weight: 600; text-transform: lowercase; }
 // ITEM
 
 .itemrow {
-	// -moz-column-width: 18em;
-	// -webkit-column-width: 18em;
-	// -moz-column-gap: 1em;
-	// -webkit-column-gap:1em; 
+    margin-top: -100px;
 }
 
 .item {
