--- a/themes/yodeley/style.css
+++ b/themes/yodeley/style.css
@@ -258,6 +258,16 @@ ul.navbar-nav li > a {
     color: #fff1e2;
     display: none; }
 
+#category-page h1 {
+  color: #f8ba72;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 4em;
+  font-weight: 300; }
+  @media all and (min-width: 768px) {
+    #category-page h1 {
+      font-size: 6em; } }
+
 #produtora {
   text-align: center;
   color: white;
