--- a/themes/yodeley/style.scss
+++ b/themes/yodeley/style.scss
@@ -387,6 +387,19 @@ ul.navbar-nav li>a { font-weight: 600; text-transform: lowercase; }
   }
 }
 
+#category-page {
+  h1 {
+    color: $yellow;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 4em;
+    font-weight: 300;
+    @media all and (min-width: 768px) {
+      font-size: 6em;
+    }
+  }
+}
+
 #produtora {
   text-align: center;
   color: white;
