--- a/themes/yodeley/views/category.html
+++ b/themes/yodeley/views/category.html
@@ -1,7 +1,11 @@
 <div id="wrapper">
 
-	<div class="container">
-
+	<div id="category-page" class="container">
+		<div class="row">
+			<div class="col-sm-12">
+				<h1 ng-bind-html="category.name"></h1>
+			</div>
+		</div>
 		<div class="row itemrow">
 			<item></item>
 		</div>
